--- a/package.json
+++ b/package.json
@@ -5,11 +5,16 @@
   "main": "index.js",
   "scripts": {
     "sass": "sass --no-source-map src/main.scss static/main.css",
-    "watch": "sass --no-source-map --watch src/main.scss static/main.css"
+    "watch": "sass --no-source-map --watch src/main.scss static/main.css",
+    "build": "webpack --watch"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "sass": "^1.56.1"
+  },
+  "devDependencies": {
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.0"
   }
 }
