--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "sass": "sass --no-source-map src/main.scss static/main.css",
     "watch": "sass --no-source-map --watch src/main.scss static/main.css",
-    "build": "webpack --watch"
+    "build": "webpack",
+    "watch-js": "webpack --watch"
   },
   "author": "",
   "license": "ISC",
